--- a/app/restaurants/pages/restaurants/restaurants.scss
+++ b/app/restaurants/pages/restaurants/restaurants.scss
@@ -1,1 +1,48 @@
 @import "../../../styles/global.scss";
+
+#restaurants-container {
+  display: flex;
+  flex-direction: space-evenly;
+  flex-wrap: wrap;
+  padding: 40px;
+  gap: 50px;
+
+  .restaurant-card {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1),
+      /* blagi senka od dole */ 0 1px 3px rgba(0, 0, 0, 0.08); /* mala senka blizu ivice */
+
+    .restaurant-name {
+      font-weight: bold;
+    }
+
+    .restaurants-actions {
+      display: flex;
+      justify-content: space-evenly;
+      padding: 5px;
+
+      .restaurant-button {
+        background-color: $button-color;
+        color: white;
+        border: none;
+        padding: 10px 18px;
+        border-radius: 6px;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        &:hover {
+          background-color: darken($button-color, 10%);
+          box-shadow: 0 6px 12px rgba(40, 167, 69, 0.5); /* zelena sa 50% providnosti */
+          transform: translateY(-3px);
+          cursor: pointer;
+        }
+
+        &:active {
+          transform: translateY(-1px);
+          box-shadow: 0 4px 6px rgba(40, 167, 69, 0.3); /* zelena sa 30% providnosti */
+        }
+      }
+    }
+  }
+}
