A.1-Dodat pregled, dodavanje, izmena, i brisanje tura za vodica.(+izmenjen login da radi sa vodicima)

--- a/app/styles/_global.scss
+++ b/app/styles/_global.scss
@@ -2,6 +2,7 @@ $primary-color: #007bff;
 $accent-color: #ff5733;
 $warn-color: #d9534f; 
 $button-color: #28a745; 
+$main-border-color: rgb(41, 27, 0);
 
 body {
     font-family: Arial, sans-serif;
@@ -65,3 +66,9 @@ button {
     }
     
 }
+
+.hidden {
+    display: none;
+}
+
+
