--- a/app/users/pages/login/login.scss
+++ b/app/users/pages/login/login.scss
@@ -11,6 +11,13 @@
     align-items: center;
     margin-top: 50px;
 }
+#restaurants{
+    display: none;
+}
+
+#tours{
+    display: none;
+}
 
 form {
     display: flex;
