--- a/app/restaurants/pages/list/myRestaurant.scss
+++ b/app/restaurants/pages/list/myRestaurant.scss
@@ -1,9 +1,9 @@
-@import "../../styles/global.scss";
+@import "../../../styles/global.scss";
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
   padding: 20px;
+  background-color: #f8f9fa;
 }
 
 h1 {
@@ -45,15 +45,40 @@ table {
     color: #fff;
 
     &:first-child {
-      background-color: #28a745; // Izmeni dugme (zeleno)
+      background-color: #28a745;
     }
 
     &:last-child {
-      background-color: #dc3545; // Obrisi dugme (crveno)
+      background-color: #dc3545;
     }
 
     &:hover {
       opacity: 0.8;
+    }
+  }
+}
+.navbar {
+  background-color: #007bff;
+  padding: 10px;
+
+  .nav-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+
+    .nav-item {
+      margin: 0 15px;
+
+      a {
+        color: white;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
