--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,59 +1,75 @@
-$primary-color: #007bff;
+$primary-color: #F8F8F8;
 $accent-color: #ff5733;
-$warn-color: #d9534f; 
-$button-color: #28a745; 
+$warn-color: #d9534f;
+$okay-color: #7dd8a0;
+$button-color: #217BA2; 
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f8f8f8;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     width: 200px;
     margin: 20px auto;
 }
 
 label {
     font-size: 14px;
-    color: $primary-color;
+    font-weight: 500;
+    color: #000;
 }
 
-input{
-    padding: 8px;
-    border-radius: 4px;
+input, textarea{
+    padding: 5px;
+    border-radius: 10px;
     font-size: 14px;
+    border: 1px solid #cecece;
 }
 
 button {
-    padding: 10px 15px;
+    padding: 10px 25px;
     background-color: $button-color;
-    color: white;
+    color: $primary-color;
     border: none;
-    border-radius: 4px;
-    font-size: 16px;
+    border-radius: 10px;
+    font-size: 17px;
 }
 
 .navbar {
     background-color: $primary-color;
     padding: 10px;
-
+    height: 45px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     .nav-list {
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
+        flex: 1;
+        justify-content: center; 
+        align-items: center;
     }
 
     .nav-item {
         margin-right: 15px;
 
         a,b {
-            color: white;
+            color: #000;
             text-decoration: none;
+        }
+
+        b {
+            font-size: 23px;
+            font-weight: bold;
         }
     }
 
@@ -65,4 +81,17 @@ button {
         margin-left: auto;
     }
     
+}
+
+.hidden {
+    display: none !important;
+}
+
+button:disabled {
+    background-color: #F8F8F8;
+    color: #E2E2E2;
+
+    &:hover {
+        cursor: not-allowed;
+    }
 }
