--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -1,10 +1,7 @@
-@use'../../../../dist/styles/global.css' as*;
+@use'../../../styles/global.scss' as *;
 
-#form-container {
-  form {
-    gap: 0;
-    width: 300px;
-  }
+* {
+  box-sizing: border-box;
 }
 
 h1 {
@@ -26,5 +23,158 @@ h1 {
   font-size: 14px;
   resize: none;
   border: 2px solid black;
+}
 
+.tab {
+  display: none;
+  flex-direction: column;
+  gap: 10px;
+  margin: 20px auto;
+  width: auto;
+}
+
+form .tab:nth-child(2) {
+  display: flex;
+  flex-direction: row;
+}
+
+#meal-input-section {
+  display: flex;
+  flex-direction: row; // horizontalni raspored
+  justify-content: center;
+  gap: 50px; // razmak između formi
+  width: 80%;
+  align-items: flex-start;
+  margin: 40px auto;
+}
+
+
+#meals-table-container {
+
+  table {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    border: 1px solid black;
+    padding: 8px;
+
+  }
+}
+
+#addBtn-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 160px;
+}
+#meal-navigationBtn{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+#meal-saveBtn{
+display: flex;
+justify-content: center;
+}
+
+#meals {
+  th:last-child,
+  td:last-child {
+    border-color: white;
+  }
+}
+
+th,
+td {
+  .deleteBtn {
+    border: none;
+  }
+
+}
+
+
+#meal-form-container {
+  border: 1px solid black;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  input {
+    display: inline-block;
+    width: 100%;
+  }
+
+  textarea {
+    display: inline-block;
+    width: 100%;
+    height: 80px;
+    resize: none;
+  }
+}
+
+form #restaurant-from {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 50px auto;
+}
+
+
+.button {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.step-container {
+  width: 350px;
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem auto;
+  position: relative;
+}
+
+.step-container::before {
+  content: '';
+  background-color: lightgray;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 100%;
+  z-index: 1;
+}
+
+.progress {
+  background-color: $button-color;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 100%;
+  z-index: 1;
+  transition: 0.4s ease-in;
+}
+
+.step {
+  background-color: lightgray;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  z-index: 1;
+  transition: 0.4s ease;
+}
+
+.step.active {
+  background-color: $button-color;
+  color: white;
+  transition-delay: 0.4s;
 }
