--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -16,20 +16,21 @@ h1 {
 
 }
 
-#description {
+textarea {
   font-family: Arial, sans-serif;
   padding: 8px;
   border-radius: 4px;
   font-size: 14px;
   resize: none;
   border: 2px solid black;
+  border-color: #D9D9D9;
 }
 
 .tab {
   display: none;
   flex-direction: column;
   gap: 10px;
-  margin: 20px auto;
+  margin: 50px auto;
   width: auto;
 }
 
@@ -38,73 +39,125 @@ form .tab:nth-child(2) {
   flex-direction: row;
 }
 
-#meal-input-section {
+#meals-container {
+  margin: 20px auto;
+
   display: flex;
-  flex-direction: row; // horizontalni raspored
-  justify-content: center;
-  gap: 50px; // razmak između formi
-  width: 80%;
-  align-items: flex-start;
-  margin: 40px auto;
+  justify-content: space-around;
 }
 
-
 #meals-table-container {
+  width: 60%;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 
   table {
-    border: 1px solid black;
+    width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;
+    padding: 10px;
+  }
+
+  #table-scroll {
+    border-radius: 10px;
+    max-height: 400px;
+    overflow-y: auto;
   }
 
   th,
   td {
-    border: 1px solid black;
-    padding: 8px;
-
+    padding: 10px;
   }
+
+  tr {
+    border: white 2px solid;
+    background-color: #A8A8A8;
+  }
+
+  thead tr {
+    background-color: #D9D9D9;
+  }
+
+  #meals td,
+  th:nth-child(1) {
+    word-break: break-word;
+    width: 25%;
+  }
+
+  #meals td,
+  th:nth-child(2) {
+    width: 10%;
+  }
+
+  #meals td,
+  th:nth-child(3) {
+    word-break: break-word;
+    width: 30%;
+  }
+
+  #meals td,
+  th:nth-child(4) {
+    word-break: break-word;
+    width: 30%;
+  }
+
+  #meals td,
+  th:nth-child(5) {
+    word-break: break-word;
+  width: 5%;
+  }  
 }
 
-#addBtn-container {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 160px;
-}
-#meal-navigationBtn{
+
+
+#meal-tableBtn {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
 }
-#meal-saveBtn{
-display: flex;
-justify-content: center;
+
+#meal-saveBtn {
+  display: flex;
+  justify-content: center;
 }
 
 #meals {
+
   th:last-child,
   td:last-child {
     border-color: white;
   }
 }
 
-th,
-td {
+#meals th,
+#meals td {
   .deleteBtn {
-    border: none;
+    padding: 6px;
+    width: 5px; 
   }
 
 }
 
-
 #meal-form-container {
-  border: 1px solid black;
+  width: 25%;
+  border-radius: 10px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: white;
 
   input {
     display: inline-block;
     width: 100%;
+    border-color: #D9D9D9;
+  }
+
+  input.error{
+    border-color:#d9534f;
   }
 
   textarea {
@@ -114,6 +167,7 @@ td {
     resize: none;
   }
 }
+
 
 form #restaurant-from {
   display: flex;
