--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -24,6 +24,9 @@ textarea {
   resize: none;
   border: 2px solid black;
   border-color: #D9D9D9;
+  &.error{
+    border-color:#d9534f;
+  }
 }
 
 .tab {
@@ -154,10 +157,6 @@ form .tab:nth-child(2) {
     display: inline-block;
     width: 100%;
     border-color: #D9D9D9;
-  }
-
-  input.error{
-    border-color:#d9534f;
   }
 
   textarea {
