--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -3,6 +3,7 @@ $accent-color: #ff5733;
 $warn-color: #d9534f; 
 $button-color: #217BA2; 
 $label-color: #333;
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -27,6 +28,9 @@ input{
     padding: 8px;
     border-radius: 4px;
     font-size: 14px;
+    &.error{
+        border-color:#d9534f;
+    }
 }
 
 button {
@@ -36,6 +40,18 @@ button {
     border: none;
     border-radius: 4px;
     font-size: 16px;
+
+     &:hover {
+        cursor: pointer;
+        background-color: lighten($button-color, 10%);
+        transform: scale(1.05);
+        filter: brightness(1.2);
+    }
+
+    &:disabled {
+        cursor: not-allowed;
+        background-color: gray;
+    }
 }
 .deleteBtn{
     padding: 10px 15px;
