--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -70,6 +70,7 @@ button {
         b {
             font-size: 23px;
             font-weight: bold;
+            margin-right: 50px;
         }
     }
 
