--- a/app/tours/pages/touristTourDetails/touristTourDetails.scss
+++ b/app/tours/pages/touristTourDetails/touristTourDetails.scss
@@ -1,12 +1,18 @@
-@use '../../../styles/global.scss';
+@import '../../../styles/global.scss';
 
 .container {
+    background-color: white;
+    padding: 30px;
     margin-top: 5%;
     margin-bottom: 5%;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
 
     .tour-details {
         width: 100%;
@@ -27,22 +33,38 @@
                 
             }
         }
+        hr {
+            width: 75%;
+            opacity: 0.3;
+            border: none;
+            height: 1px;
+            background-color: #ccc;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
         .tour-description {
-                width: 100%;
+                margin: 5% auto;
+                font-size: 20px;
+                width: 60%;
                 text-align: center;
             }
     }
 
     .keypoint-details {
         margin-top: 5%;
+        margin-bottom: 5%;
         width: 60%;
         display: flex;
         flex-direction: column;
         gap: 50px;
         .keypoint-card {
-            background-color: #a5a5a5;
+            width: 100%;
+            max-height: 200px;
+            min-height: 200px;
+            background-color: $primary-color;
             display: flex;
             border-bottom-left-radius: 30%;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
             img {
                 width: 30%;
                 border-bottom-left-radius: 30%;
@@ -50,6 +72,11 @@
             .keypoint-desc-container {
                 width: 70%;
                 text-align: center;
+
+                p {
+                    width: 80%;
+                    margin: 0 auto;
+                }
             }
         }
     }
