--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -24,10 +24,12 @@ textarea {
   resize: none;
   border: 2px solid black;
   border-color: #D9D9D9;
-  &.error{
-    border-color:#d9534f;
+
+  &.error {
+    border-color: #d9534f;
   }
 }
+
 
 .tab {
   display: none;
@@ -61,6 +63,10 @@ form .tab:nth-child(2) {
     border-collapse: collapse;
     table-layout: fixed;
     padding: 10px;
+
+    i {
+      color: #DD5C5C;
+    }
   }
 
   #table-scroll {
@@ -75,8 +81,18 @@ form .tab:nth-child(2) {
   }
 
   tr {
-    border: white 2px solid;
-    background-color: #A8A8A8;
+    font-size: 12px;
+    background-color: #f8f8f8;
+  }
+
+  tbody {
+    tr {
+      border-bottom: 1px solid #ddd;
+
+      &:nth-of-type(even) {
+        background-color: rgb(209, 209, 209);
+      }
+    }
   }
 
   thead tr {
@@ -109,8 +125,8 @@ form .tab:nth-child(2) {
   #meals td,
   th:nth-child(5) {
     word-break: break-word;
-  width: 5%;
-  }  
+    width: 5%;
+  }
 }
 
 
@@ -138,7 +154,7 @@ form .tab:nth-child(2) {
 #meals td {
   .deleteBtn {
     padding: 6px;
-    width: 5px; 
+    width: 5px;
   }
 
 }
