--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,85 +1,81 @@
-$primary-color: #EAEAEA;
+$primary-color: #F8F8F8;
 $accent-color: #ff5733;
-$warn-color: #d9534f; 
-$button-color: #217BA2; 
-$label-color: #333;
+$warn-color: #d9534f;
+$okay-color: #7dd8a0;
+$button-color: #217BA2;
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F8F8F8;
+    background-color: #f8f8f8;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: 500px;
+    gap: 20px;
+    width: 200px;
     margin: 20px auto;
 }
 
 label {
     font-size: 14px;
-    color: $label-color;
+    font-weight: 500;
+    color: #000;
 }
 
-input{
-    padding: 8px;
-    border-radius: 4px;
+input,
+textarea {
+    padding: 5px;
+    border-radius: 10px;
     font-size: 14px;
-    &.error{
-        border-color:#d9534f;
-    }
+    border: 1px solid #cecece;
 }
+.error {
+        border-color: $warn-color;
+    }
 
 button {
-    padding: 10px 15px;
+    padding: 10px 25px;
     background-color: $button-color;
-    color: white;
+    color: $primary-color;
     border: none;
-    border-radius: 4px;
-    font-size: 16px;
-
-     &:hover {
-        cursor: pointer;
-        background-color: lighten($button-color, 10%);
-        transform: scale(1.05);
-        filter: brightness(1.2);
-    }
-
-    &:disabled {
-        cursor: not-allowed;
-        background-color: gray;
-    }
-}
-.deleteBtn{
-    padding: 10px 15px;
-    background-color: $warn-color;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    overflow-wrap: normal
+    border-radius: 10px;
+    font-size: 17px;
 }
 
 .navbar {
     background-color: $primary-color;
     padding: 10px;
+    height: 45px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .nav-list {
         list-style: none;
         margin: 0;
         padding: 0;
         display: flex;
+        flex: 1;
+        justify-content: center;
+        align-items: center;
     }
 
     .nav-item {
         margin-right: 15px;
 
-        a,b {
-            color:black;
+        a,
+        b {
+            color: #000;
             text-decoration: none;
+        }
+
+        b {
+            font-size: 23px;
+            font-weight: bold;
         }
     }
 
@@ -90,5 +86,18 @@ button {
     #logout {
         margin-left: auto;
     }
-    
+
+}
+
+.hidden {
+    display: none !important;
+}
+
+button:disabled {
+    background-color: #F8F8F8;
+    color: #E2E2E2;
+
+    &:hover {
+        cursor: not-allowed;
+    }
 }
