--- a/app/restaurants/pages/restaurants/restaurants.scss
+++ b/app/restaurants/pages/restaurants/restaurants.scss
@@ -1,15 +1,15 @@
 @use"../../../styles/global.scss" as*;
 
 .restaurant-container {
-    background-color: white;
+    // background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 
     .restaurant-card {
-        border: 1px solid black;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
         border-radius: 10px;
-        width: 600px;
+        width: 800px;
         display: flex;
         margin: 10px;
 
@@ -17,18 +17,22 @@
         #card-pictureSection {
             display: inline-block;
             height: 300px;
-           
+
 
             img {
                 display: inline-block;
-                width: 200px;
-                border-radius: 10px;
+                width: 250px;
+                height: 100%;
+                // border-radius: 10px;
+                border-top-left-radius: 10px;
+                border-bottom-left-radius: 10px;
             }
         }
 
+
         #card-mainSection {
-            height: 100%;
-            padding-left: 10px;
+            height: 90%;
+            padding: 10px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -47,11 +51,14 @@
             #button-container {
                 margin-top: 20px;
                 display: flex;
-                justify-content: space-around;
+                justify-content: flex-end;
+                position: relative;
+                
 
                 .button {
                     width: 100px;
                     margin-bottom: 20px;
+                    margin-left: 50px;
                 }
             }
         }
@@ -59,17 +66,49 @@
     }
 }
 
-#addBtn {
-    margin-top: 20px;
-    margin-left: 20px;
+#addBtn-container {
+    display: flex;
 }
 
-h1{
+#addBtn {
+    margin: 20px auto;
+}
+
+h1 {
     font-family: 'Segoe UI', sans-serif;
-  font-size: 28px;
-  color: #333;
-  text-shadow: 2px 2px 4px lightgray;
-  margin-bottom: 20px;
-  padding: 10px;
-  text-align: center;
+    font-size: 28px;
+    color: #333;
+    text-shadow: 2px 2px 4px lightgray;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+}
+
+#hidden-button-container{
+     display: none;
+    // display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    position: absolute;
+    top: 100%;
+     right: 0;
+     background: $primary-color;
+     border-radius: 10px;
+     box-shadow: 0px 8px 16px rgba(0,0,0,0.15);
+     padding: 10px 0;
+     min-width: 100px;
+     z-index: 10;
+}
+
+#button-container #hidden-button-container #editBtn,
+#button-container #hidden-button-container #deleteBtn{
+    width: 100%;
+    margin: 0;
+color: #333;
+background-color: $primary-color;
+border-radius: 0;
+}
+#button-container #hidden-button-container #deleteBtn{
+    background-color: $warn-color;
 }
