--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -132,12 +132,11 @@ form .tab:nth-child(2) {
   }
 }
 
-
-
 #meal-tableBtn {
   margin-top: 20px;
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 #meal-saveBtn {
@@ -204,29 +203,45 @@ form #restaurant-from {
 }
 
 .tooltiptext {
-  bottom: 120%;
+  bottom: 130%;
   left: 90%;
   transform: translateX(-50%);
-  width: max-content;
+  width: 200px;
   background-color: black;
   color: white;
   text-align: center;
   padding: 6px 6px;
   border-radius: 6px;
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   opacity: 0;
   transition: opacity 1.5s ease-in-out 0.5s;
 }
 
-#restaurant-from .button:hover .tooltiptext {
-  color: white;
-  opacity: 1;
-
+.tooltip-wrapper {
+  position: relative;
+  display: inline-block;
 }
 
-#restaurant-from .button .tooltiptext::after {
-  content: " ";
+.tooltiptext {
+  position: absolute;
+  bottom: 130%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 220px;
+  background-color: black;
+  color: white;
+  padding: 6px 10px;
+  border-radius: 6px;
+  z-index: 1000;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out;
+  white-space: normal;
+}
+
+.tooltiptext::after {
+  content: "";
   position: absolute;
   top: 100%;
   left: 50%;
@@ -234,14 +249,17 @@ form #restaurant-from {
   border-width: 5px;
   border-style: solid;
   border-color: black transparent transparent transparent;
-  color: white;
+}
+
+.tooltip-wrapper:hover button:disabled + .tooltiptext {
+  opacity: 1;
 }
 
 .button {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  position: relative;
+
 }
 
 .step-container {
