--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -53,84 +53,61 @@ form .tab:nth-child(2) {
 
 #meals-table-container {
   width: 60%;
+
+
   background-color: white;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    table-layout: fixed;
-    padding: 10px;
+}
 
-    i {
-      color: #DD5C5C;
-    }
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  padding: 10px;
 
-  #table-scroll {
-    border-radius: 10px;
-    max-height: 400px;
-    overflow-y: auto;
-  }
-
-  th,
-  td {
-    padding: 10px;
-  }
-
-  tr {
-    font-size: 12px;
-    background-color: #f8f8f8;
-  }
-
-  tbody {
-    tr {
-      border-bottom: 1px solid #ddd;
-
-      &:nth-of-type(even) {
-        background-color: rgb(209, 209, 209);
-      }
-    }
-  }
-
-  thead tr {
-    position: sticky;
-    top: 0;
-    background-color: #D9D9D9;
-    z-index: 2;
-  }
-
-  #meals td,
-  th:nth-child(1) {
-    word-break: break-word;
-    width: 25%;
-  }
-
-  #meals td,
-  th:nth-child(2) {
-    width: 10%;
-  }
-
-  #meals td,
-  th:nth-child(3) {
-    word-break: break-word;
-    width: 30%;
-  }
-
-  #meals td,
-  th:nth-child(4) {
-    word-break: break-word;
-    width: 30%;
-  }
-
-  #meals td,
-  th:nth-child(5) {
-    word-break: break-word;
-    width: 5%;
+  i {
+    color: #DD5C5C;
   }
 }
+
+#publish-meals-table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  padding: 10px;
+}
+
+#table-scroll {
+  border-radius: 10px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+tr {
+  font-size: 12px;
+  background-color: #f8f8f8;
+}
+
+tbody {
+  tr {
+    border-bottom: 1px solid #ddd;
+
+    &:nth-of-type(even) {
+      background-color: rgb(209, 209, 209);
+    }
+  }
+}
+
+thead tr {
+  position: sticky;
+  top: 0;
+  background-color: #D9D9D9;
+  z-index: 2;
+}
+
 
 #meal-tableBtn {
   margin-top: 20px;
@@ -145,10 +122,38 @@ form .tab:nth-child(2) {
 }
 
 #meals {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+
+  thead,
+  tbody {
+    display: block;
+  }
+
+  thead {
+    width: 100%;
+  }
+
+  tbody {
+    max-height: 300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: block;
+  }
+
+
+  th,
+  td {
+    width: 25%; // uskladi sa brojem kolona i razmerom
+    padding: 10px;
+    text-align: left;
+    box-sizing: border-box;
+  }
 
   th:last-child,
   td:last-child {
-    border-color: white;
+    width: 20%;
   }
 }
 
@@ -251,7 +256,7 @@ form #restaurant-from {
   border-color: black transparent transparent transparent;
 }
 
-.tooltip-wrapper:hover button:disabled + .tooltiptext {
+.tooltip-wrapper:hover button:disabled+.tooltiptext {
   opacity: 1;
 }
 
@@ -263,7 +268,7 @@ form #restaurant-from {
 }
 
 .step-container {
-  width: 350px;
+  width: 800px;
   display: flex;
   justify-content: space-between;
   margin: 2rem auto;
@@ -283,7 +288,7 @@ form #restaurant-from {
 }
 
 .progress {
-  background-color: $button-color;
+  background-color: #13adff;
   position: absolute;
   top: 50%;
   left: 0;
@@ -307,7 +312,158 @@ form #restaurant-from {
 }
 
 .step.active {
-  background-color: $button-color;
+  background-color: #13adff;
   color: white;
   transition-delay: 0.4s;
+}
+
+#publish-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#publish-data {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+#meal-table {
+  width: 90%;
+
+}
+
+#publish-meals-table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+  border: 1px solid #cccccc;
+
+  th,
+  td {
+    padding: 10px;
+    text-align: center;
+    box-sizing: border-box;
+  }
+
+  th:nth-child(1),
+  td:nth-child(1) {
+    width: 20%;
+  }
+
+  th:nth-child(2),
+  td:nth-child(2) {
+    width: 10%;
+  }
+
+  th:nth-child(3),
+  td:nth-child(3) {
+    width: 35%;
+  }
+
+  th:nth-child(4),
+  td:nth-child(4) {
+    width: 35%;
+  }
+
+}
+
+#table-scroll-meal {
+  border-radius: 10px;
+  max-height: 220px;
+  overflow-y: auto;
+
+}
+
+#publishBtn {
+  margin-top: 50px;
+
+  &:disabled {
+    background-color: #F8F8F8;
+    color: #E2E2E2;
+
+    &:hover {
+      cursor: not-allowed;
+    }
+  }
+}
+
+.restaurant-card {
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  width: 100%;
+  display: flex;
+  margin: 10px;
+  background-color: #f0f0f0;
+
+
+  #card-pictureSection {
+    display: inline-block;
+    width: 30%;
+    height: 300px;
+
+    img {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+    }
+  }
+
+
+  #card-mainSection {
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 70%;
+
+    p {
+      display: inline-block;
+      width: 100%;
+      margin: 5px;
+    }
+
+    #restaurantName {
+      font-size: 22px;
+    }
+
+  }
+}
+
+#publish-restaurant-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+#loading-message {
+  margin-top: 15px;
+  color: #217ba2;
+  font-weight: bold;
+  text-align: center;
+  animation: fadeIn 0.3s ease-in-out;
+
+  &.hidden {
+    display: none;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
