--- a/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
+++ b/app/restaurants/pages/restaurantsForm/restaurantsForm.scss
@@ -145,7 +145,7 @@ thead tr {
 
   th,
   td {
-    width: 25%; // uskladi sa brojem kolona i razmerom
+    width: 25%;
     padding: 10px;
     text-align: left;
     box-sizing: border-box;
@@ -446,9 +446,18 @@ form #restaurant-from {
   margin-bottom: 10px;
 }
 
+#success-message{
+  margin-top: 20px;
+  color: #7dd8b5;
+  font-weight: bold;
+  text-align: center;
+  animation: fadeIn 0.3s ease-in-out;
+
+}
+
 #loading-message {
-  margin-top: 15px;
-  color: #217ba2;
+  margin-top: 20px;
+  color: #333;
   font-weight: bold;
   text-align: center;
   animation: fadeIn 0.3s ease-in-out;
