--- a/app/restaurants/pages/form/restaurantForm.scss
+++ b/app/restaurants/pages/form/restaurantForm.scss
@@ -4,13 +4,13 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f8f9fa;
   margin: 0;
-  padding: 20px;
+  padding: 0px;
 }
 
 h1 {
   text-align: center;
   color: #333;
-  margin-bottom: 30px;
+  margin-bottom: 30px 0;
 }
 
 form {
@@ -20,18 +20,16 @@ form {
   padding: 30px 40px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
-
   display: flex;
   flex-direction: column;
 
   label {
     margin-bottom: 5px;
     font-weight: bold;
-    color: $primary-color; // koristi tvoju global varijablu
+    color: $primary-color;
   }
 
-  input[type="text"],
-  input[type="number"],
+  input,
   textarea {
     padding: 10px;
     border: 1px solid #ccc;
@@ -89,7 +87,99 @@ form {
     }
   }
 
-  #login, #logout {
+  #login, #logout, #myRestaurants {
     margin-left: auto;
+  }
+}
+#mealsList {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+
+  .meal-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+
+    span {
+      font-weight: bold;
+    }
+
+    button {
+      background-color: $warn-color;
+      color: white;
+      border: none;
+      padding: 6px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+#addMealBtn {
+  display: block;
+  margin: 0 auto 20px auto;
+  background-color: $primary-color;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken($primary-color, 10%);
+  }
+}
+
+#mealFormContainer {
+  max-width: 500px;
+  margin: 0 auto 30px auto;
+  padding: 20px;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  #saveMealBtn {
+    background-color: $button-color;
+    color: white;
+    padding: 10px;
+    border: none;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: darken($button-color, 10%);
+    }
+  }
+}
+#publishBtn {
+  margin-top: 16px;
+  padding: 8px 16px;
+  background-color: #27ae60;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #1e8449;
   }
 }
