Odradjena stilizacija i opcije za korisnika u gornjem desnom uglu (Bolji UI/UX).

--- a/app/tours/pages/TouristTourReservations/touristTourReservations.scss
+++ b/app/tours/pages/TouristTourReservations/touristTourReservations.scss
@@ -49,6 +49,7 @@ h1 {
     }
 
     button {
+        cursor: pointer;
         background-color: #DD5C5C;
         &:hover {
             transform: scale(1.03);
