--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -78,7 +78,7 @@ button {
         margin-left: auto;
     }
 
-    #logout {
+    #user {
         margin-left: auto;
     }
 
@@ -96,4 +96,63 @@ button:disabled {
         cursor: not-allowed;
         transform: none !important;
     }
+}
+#user {
+    display: flex;
+}
+
+.user-menu {
+  font-family: sans-serif;
+}
+
+.username {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.avatar {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+  &:hover {
+    background-color: #ebebeb;
+  }
+  i {
+    font-size: 1em;
+  }
+}
+
+.dropdown {
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  display: none;
+  flex-direction: column;
+  min-width: 170px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  overflow: hidden;
+  z-index: 999;
+  margin-right: 32px;
+}
+
+.dropdown a {
+  padding: 10px;
+  text-decoration: none;
+  color: #333;
+  display: block;
+  transition: background 0.2s;
+}
+
+.dropdown a:hover {
+  background: $primary-color;
 }
