--- a/app/users/pages/login/login.scss
+++ b/app/users/pages/login/login.scss
@@ -9,7 +9,12 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 50px;
+    background-color: white;
+    width: 20%;
+    margin: 10% auto;
+    padding: 30px 0;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 #restaurants{
     display: none;
