Folder preimenovan u user-interface i dodatno razdeljen na foldere po stranicama, postavljena pocetna struktura html stranice za detalje ture i pocetni scss doc

--- a/app/tours/pages/user-interface/main-page/user.scss
+++ b/app/tours/pages/user-interface/main-page/user.scss
@@ -105,6 +105,7 @@ body {
             transform-style: preserve-3d;
             transition: transform 0.8s;
             cursor: pointer;
+            pointer-events: auto;
 
             &:hover {
                 transform: rotateY(180deg);
